# bettercode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bettercode/: __init__.py  app_meta.py  i18n.py  main.py  packaging.py  settings.py  updater.py
bettercode/auth/: __init__.py  key_manager.py  subscription.py
bettercode/cli/: app.py
bettercode/context/: __init__.py  memory.py  state.py  tokens.py
bettercode/gui/: app.py
bettercode/router/: __init__.py  selector.py
bettercode/web/: __init__.py  api.py  app_payloads.py  artifact_ops.py  bootstrap.py  chat_context.py  chat_processes.py  desktop.py  generated_paths.py  git_ops.py  system_actions.py  telemetry.py
bettercode/web/static/: app.js  bettercode.icns  index.html  styles.css
tests/: test_app_meta.py  test_context_memory.py  test_context_tokens.py  test_main.py  test_packaging.py  test_router.py  test_routing_evals.py  test_selector.py  test_updater.py  test_web_api.py  test_web_desktop.py  test_web_desktop_spellcheck.py  test_web_desktop_window_controls.py
