[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercode"
version = "0.1.0"
description = "A Multi-Agent Software Engineering CLI and Native Desktop App"
readme = "README.md"
authors = [
    {name = "seniorswe", email = "contact@codebetter.org"}
]
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "prompt_toolkit>=3.0.40",
    "rich>=13.7.0",
    "keyring>=24.3.0",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "PyQt6>=6.8.0",
    "PyQt6-WebEngine>=6.8.0",
    "setproctitle>=1.3.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.11.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bettercode*"]

[project.scripts]
bettercode = "bettercode.main:main"
bettercode-package = "bettercode.packaging:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes (undefined names, unused imports, etc.)
select = ["E", "F"]
ignore = [
    "E501",  # line too long — not enforced, codebase has intentionally long lines
]
